yamls/morphos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: morphos
spec:
  selector:
    app: morphos
  ports:
    - protocol: TCP
      port: 8080
      name: http
